static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Quicksand&family=Roboto+Condensed&display=swap');


body {
    height: 100%;
    font-family: 'Kanit', sans-serif;
    background-color: #FFF6F2;
}

/* base.html styling  */
.callout {
    padding: 50px;
    text-align: center;
    color: white;
    background: linear-gradient(rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0.5)), url('/media/playing-cards.jpg') no-repeat center center;
    min-height: 200px;
    max-height: 300px;
}

/* Media queries */
@media (max-width: 330px) {
    .callout-paragraph {
        display: none;
    }
}

/* index.html styling */
.circle-text {
    width: 370px;
    height: 370px;
    border: 3px solid red;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    background: url('/media/aces.jpg') center/cover;
    margin-top: 20px;
    margin-bottom: 20px;
}

.rectangle-text {
    width: 90%;
    min-height: 350px;
    padding: 5%;
    border: 3px solid red;
    border-radius: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: url('/media/aces.jpg') center/cover;
    margin-top: 20px;
    margin-bottom: 20px;
    color: white;
}

.box-text {
    color: white;
    text-align: center;
    padding: 10px;
}

.center-button {
    align-items: center;
    justify-content: center;
    margin-left: 33%;
}

.poker-tips {
    padding: 15px;
}

.signup-text {
    padding: 15px;
}

/* Media queries */

@media (max-width: 450px) {

    .poker-tips {
        display: none;
    }

    .circle-text {
        font-size: smaller;
        width: 300px;
        height: 300px;
        border: 5px solid red;
        border-radius: 50%;
        display: flex;
        align-items: center;
        justify-content: center;
        background: url('/media/aces.jpg') center/cover;
        margin-top: 20px;
        margin-bottom: 10px;
    }
}

@media (max-width: 295px) {

    .circle-text {
        font-size: smaller;
        width: 250px;
        height: 250px;
        border: 5px solid red;
        border-radius: 50%;
        display: flex;
        align-items: center;
        justify-content: center;
        background: url('/media/aces.jpg') center/cover;
        margin-top: 20px;
        margin-bottom: 10px;
    }
}

/* Course_contents styling */
.image-container {
    width: 100vh;
    min-width: 270px;
    max-width: 60vw;
    max-height: 70vw;
    height: 60vh;
    margin: 0 auto;


}

.image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    padding: 20px;
    color: #fff;
    margin: 10px 0;

}

/* Media queries */
@media (max-width: 600px) {

    .overlay h1,
    .overlay p {
        font-size: small
    }

}


/* Footer styling */
footer {
    background-color: red;
    padding: 20px 0;
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
    color: white;
    background: linear-gradient(rgba(255, 0, 0, 0.5), rgba(255, 0, 0, 0.5)), url('/media/playing-cards-footer.jpg') no-repeat center center;
}

.privacy-policy {
    font-family: 'Poppins', sans-serif;
    color: white;
}

.footer-icon {
    text-decoration: none;
    display: flex;
    justify-content: space-around;
    width: 100%;
    font-size: 30px;
    color: white;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;

}

.footer-icon:hover {
    color: black;
    text-decoration: none;
}

